Fixed spacing

--- a/style.scss
+++ b/style.scss
@@ -213,10 +213,6 @@ header {
 #products {
   margin-top: 20px;
 
-  p {
-    margin-bottom: 10px;
-  }
-
   .product {
     position: relative;
     margin-bottom: 20px;
